--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express-rate-limit": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "sharp": "^0.30.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/sharp": "^0.30.5",
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
